# nebula

./: AGENTS.md  Cargo.toml  config.toml  config.toml.example  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.electron.json  tsconfig.json  tsconfig.node.json  vite.config.ts
dist-electron/: config.js  config.js.map  main.js  main.js.map  preload.cjs  preload.cjs.map  preload.js  preload.js.map  preload.mjs
dist-electron/db/: index.js  index.js.map  mongodb.js  mongodb.js.map  mysql.js  mysql.js.map  postgres.js  postgres.js.map  sqlite.js  sqlite.js.map
electron/: config.ts  main.ts  preload.cts  preload.ts
electron/db/: index.ts  mongodb.ts  mysql.ts  postgres.ts  sqlite.ts
scripts/: run-dev-electron.cjs
src/: App.vue  config.toml.example  main.rs  main.ts  monaco-setup.ts  style.css  vite-env.d.ts
src/components/: Entry.vue  NebulaLayout.vue
src/components/layout/: NebulaLayout.vue
src/components/ui/: Icon.vue  NebulaConnectionDialog.vue  NebulaEditor.vue  NebulaHeader.vue  NebulaResults.vue  NebulaSidebar.vue  NebulaTerminal.vue  NebulaWelcome.vue
src/config/: mod.rs
src/db/: mod.rs  mysql.rs
src/models/: connection.rs  mod.rs  query.rs
src/theme/: mod.rs
src/types/: database.ts
src/ui/: connection_form.rs  main_view.rs  mod.rs  query_editor.rs  results_table.rs  schema_browser.rs  sidebar.rs  tabs.rs
src/utils/: connection.ts
