[package]
name = "nebula"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
iced = { version = "0.14.0", features = ["wgpu", "image", "tokio"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Database drivers
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "mysql", "postgres", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Filesystem
dirs = "6.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"
once_cell = "1.20"

# Connection string parsing
url = "2.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
